--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <li>git branch (to check brench) </li>
         <li>git branch -M main (to rename breach) </li>
         <li>git push origin main </li>
+        <li>git checkout (to navigate ti another branch) </li>
+        <li>git checkout -b (to create new branch) </li>
     </ol>
 </body>
 </html>
