--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>git push origin main </li>
         <li>git checkout (to navigate ti another branch) </li>
         <li>git checkout -b (to create new branch) </li>
+        <li>pull request are used to merging code </li>
     </ol>
 </body>
 </html>
